# Schwarzschild-BH-raytracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
resources/: fg.ppm  fg2.ppm
src/: ioFiles.cpp  ioFiles.h  rungeKutta.cpp  rungeKutta.h  saveToFiles.cpp  saveToFiles.h  traceRays.cpp  traceRays.h
